@@ -1,42 +1,117 @@
 package Strikeboom.xtradrinks.items.juice;
 
-import Strikeboom.xtradrinks.init.ModItems;
-import net.minecraft.entity.EntityLivingBase;
-import net.minecraft.item.EnumAction;
-import net.minecraft.item.ItemFood;
-import net.minecraft.item.ItemStack;
-import net.minecraft.potion.PotionEffect;
-import net.minecraft.world.World;
+import Strikeboom.xtradrinks.XtraDrinks;
+import Strikeboom.xtradrinks.init.XtraDrinksItems;
+import com.google.common.collect.Lists;
+import com.mojang.datafixers.util.Pair;
+import net.minecraft.ChatFormatting;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.MutableComponent;
+import net.minecraft.network.chat.TextComponent;
+import net.minecraft.network.chat.TranslatableComponent;
+import net.minecraft.sounds.SoundEvent;
+import net.minecraft.sounds.SoundEvents;
+import net.minecraft.world.effect.MobEffect;
+import net.minecraft.world.effect.MobEffectInstance;
+import net.minecraft.world.effect.MobEffectUtil;
+import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.entity.ai.attributes.Attribute;
+import net.minecraft.world.entity.ai.attributes.AttributeModifier;
+import net.minecraft.world.food.FoodProperties;
+import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.TooltipFlag;
+import net.minecraft.world.item.UseAnim;
+import net.minecraft.world.level.Level;
+import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 
-public class Juice extends ItemFood {
-    List<PotionEffect> effects = new ArrayList<>();
-    public Juice(PotionEffect... effects) {
-        super(4, 0.4f, false);
-        this.effects.addAll(Arrays.asList(effects));
-        setMaxStackSize(1);
-        setAlwaysEdible();
+public class Juice extends Item {
+    List<MobEffectInstance> effects = new ArrayList<>();
+    public Juice(MobEffectInstance... effects) {
+        super(new Properties().durability(0).stacksTo(1).food(new FoodProperties.Builder().nutrition(4).saturationMod(.4f).alwaysEat().build()).tab(XtraDrinks.CREATIVE_MODE_TAB));
+        this.effects.addAll(List.of(effects));
     }
 
     @Override
-    public int getMaxItemUseDuration(ItemStack stack) {
+    public void appendHoverText(ItemStack pStack, @Nullable Level pLevel, List<Component> pTooltipComponents, TooltipFlag pIsAdvanced) {
+        super.appendHoverText(pStack, pLevel, pTooltipComponents, pIsAdvanced);
+        pTooltipComponents.add(new TranslatableComponent("item." + XtraDrinks.MOD_ID + ".tooltip.juice"));
+
+        //I stole this part off of potion utils to add the potion effect tooltips
+        List<Pair<Attribute, AttributeModifier>> list1 = Lists.newArrayList();
+            for(MobEffectInstance effect : effects) {
+                MutableComponent mutablecomponent = new TranslatableComponent(effect.getDescriptionId());
+                MobEffect mobeffect = effect.getEffect();
+                Map<Attribute, AttributeModifier> map = mobeffect.getAttributeModifiers();
+                if (!map.isEmpty()) {
+                    for(Map.Entry<Attribute, AttributeModifier> entry : map.entrySet()) {
+                        AttributeModifier attributemodifier = entry.getValue();
+                        AttributeModifier attributemodifier1 = new AttributeModifier(attributemodifier.getName(), mobeffect.getAttributeModifierValue(effect.getAmplifier(), attributemodifier), attributemodifier.getOperation());
+                        list1.add(new Pair<>(entry.getKey(), attributemodifier1));
+                    }
+                }
+
+                if (effect.getAmplifier() > 0) {
+                    mutablecomponent = new TranslatableComponent("potion.withAmplifier", mutablecomponent, new TranslatableComponent("potion.potency." + effect.getAmplifier()));
+                }
+
+                if (effect.getDuration() > 20) {
+                    mutablecomponent = new TranslatableComponent("potion.withDuration", mutablecomponent, MobEffectUtil.formatDuration(effect, 1f));
+                }
+
+                pTooltipComponents.add(mutablecomponent.withStyle(mobeffect.getCategory().getTooltipFormatting()));
+            }
+
+        if (!list1.isEmpty()) {
+            pTooltipComponents.add(TextComponent.EMPTY);
+            pTooltipComponents.add((new TranslatableComponent("potion.whenDrank")).withStyle(ChatFormatting.DARK_PURPLE));
+
+            for(Pair<Attribute, AttributeModifier> pair : list1) {
+                AttributeModifier attributemodifier2 = pair.getSecond();
+                double d0 = attributemodifier2.getAmount();
+                double d1;
+                if (attributemodifier2.getOperation() != AttributeModifier.Operation.MULTIPLY_BASE && attributemodifier2.getOperation() != AttributeModifier.Operation.MULTIPLY_TOTAL) {
+                    d1 = attributemodifier2.getAmount();
+                } else {
+                    d1 = attributemodifier2.getAmount() * 100.0D;
+                }
+
+                if (d0 > 0.0D) {
+                    pTooltipComponents.add((new TranslatableComponent("attribute.modifier.plus." + attributemodifier2.getOperation().toValue(), ItemStack.ATTRIBUTE_MODIFIER_FORMAT.format(d1), new TranslatableComponent(pair.getFirst().getDescriptionId()))).withStyle(ChatFormatting.BLUE));
+                } else if (d0 < 0.0D) {
+                    d1 *= -1.0D;
+                    pTooltipComponents.add((new TranslatableComponent("attribute.modifier.take." + attributemodifier2.getOperation().toValue(), ItemStack.ATTRIBUTE_MODIFIER_FORMAT.format(d1), new TranslatableComponent(pair.getFirst().getDescriptionId()))).withStyle(ChatFormatting.RED));
+                }
+            }
+        }
+    }
+
+    @Override
+    public int getUseDuration(ItemStack pStack) {
         return 22;
     }
+    public UseAnim getUseAnimation(ItemStack pStack) {
+        return UseAnim.DRINK;
+    }
 
-    @Override
-    public EnumAction getItemUseAction(ItemStack stack) {
-        return EnumAction.DRINK;
+    public SoundEvent getDrinkingSound() {
+        return SoundEvents.GENERIC_DRINK;
+    }
+
+    public SoundEvent getEatingSound() {
+        return SoundEvents.GENERIC_DRINK;
     }
 
     @Override
-    public ItemStack onItemUseFinish(ItemStack stack, World worldIn, EntityLivingBase entityLiving) {
-        stack.shrink(1);
-        for (PotionEffect effect: effects) {
-            entityLiving.addPotionEffect(new PotionEffect(effect.getPotion(),effect.getDuration() * 20,effect.getAmplifier()));
+    public ItemStack finishUsingItem(ItemStack pStack, Level pLevel, LivingEntity pLivingEntity) {
+        pStack.shrink(1);
+        for (MobEffectInstance effect: effects) {
+            pLivingEntity.addEffect(effect);
         }
-         return stack.isEmpty() ? new ItemStack(ModItems.drink_cup): stack;
+        return pStack.isEmpty() ? new ItemStack(XtraDrinksItems.DRINK_CUP.get()): pStack;
     }
 }
